[project]
name = "article-content-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.10.0",
    "lmstudio>=1.2.0",
    "ollama>=0.4.7",
    "pymongo>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
